--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=kosa-space-api
 
-# Port 설정
+# Port
 server.port=80
 
 # DataSource
-# Hikari DataSource 설정
-spring.datasource.url=jdbc:oracle:thin:@kosa164.iptime.org:1521:orcl
+# Hikari DataSource
+spring.datasource.url=jdbc:oracle:thin:@kosa160.iptime.org:1521:orcl
 spring.datasource.username=user_final_team3
 spring.datasource.password=oracle
 spring.datasource.hikari.maximum-pool-size=2
@@ -18,5 +18,5 @@ spring.servlet.multipart.max-request-size=50MB
 mybatis.config-location=classpath:mybatis/mapper-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-# JWT 비밀키 설정
+# JWT
 jwt.security.key=com.mycompany.jsonwebtoken.kosaspace
